added some more functionality
